package fr.football.patterns.strategy;

public interface GameStrategy {
    /**
     * @param name the player name
     */
    void applyStrategy(String name);
}
