@startuml
'https://plantuml.com/class-diagram

interface GameStrategy{
 +applyStrategy(String name):void
}
class AttackStrategy
class DefenseStrategy
class Player {
String name
+applyCoachStrategy(GameStrategy strategy):void
}

 GameStrategy <|.. AttackStrategy
 GameStrategy <|.. DefenseStrategy




@enduml
